<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:background="@drawable/ic_background">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_main"
        app:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/tool_bar_icon"
            app:title="@string/app_name"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            app:titleTextColor="@color/cream"
            app:titleMarginTop="15dp"
            app:titleTextAppearance="@style/TitleTextAppearance"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none">
                <RadioGroup
                    android:id="@+id/article_categories_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/radio_grp_background">
                    <RadioButton
                        android:id="@+id/general_button"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginVertical="6dp"
                        android:background="@drawable/radio_image_button"
                        android:button="@null"
                        android:elevation="4dp"
                        android:checked="true"
                        android:paddingHorizontal="10dp"
                        android:text="@string/general"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        tools:ignore="TouchTargetSizeCheck" />
                    <RadioButton
                        android:id="@+id/business_button"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginVertical="6dp"
                        android:background="@drawable/radio_image_button"
                        android:button="@null"
                        android:elevation="4dp"
                        android:paddingHorizontal="10dp"
                        android:text="@string/business"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        tools:ignore="TouchTargetSizeCheck" />
                    <RadioButton
                        android:id="@+id/entertainment_button"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginVertical="6dp"
                        android:background="@drawable/radio_image_button"
                        android:button="@null"
                        android:elevation="4dp"
                        android:paddingHorizontal="10dp"
                        android:text="@string/entertainment"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        tools:ignore="TouchTargetSizeCheck" />
                    <RadioButton
                        android:id="@+id/health_button"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginVertical="6dp"
                        android:background="@drawable/radio_image_button"
                        android:button="@null"
                        android:elevation="4dp"
                        android:paddingHorizontal="10dp"
                        android:text="@string/health"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        tools:ignore="TouchTargetSizeCheck" />
                    <RadioButton
                        android:id="@+id/science_button"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginVertical="6dp"
                        android:background="@drawable/radio_image_button"
                        android:button="@null"
                        android:elevation="4dp"
                        android:paddingHorizontal="10dp"
                        android:text="@string/science"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        tools:ignore="TouchTargetSizeCheck" />
                    <RadioButton
                        android:id="@+id/sports_button"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginVertical="6dp"
                        android:background="@drawable/radio_image_button"
                        android:button="@null"
                        android:elevation="4dp"
                        android:paddingHorizontal="10dp"
                        android:text="@string/sports"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        tools:ignore="TouchTargetSizeCheck" />
                    <RadioButton
                        android:id="@+id/technology_button"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginVertical="6dp"
                        android:background="@drawable/radio_image_button"
                        android:button="@null"
                        android:elevation="4dp"
                        android:paddingHorizontal="10dp"
                        android:text="@string/technology"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        tools:ignore="TouchTargetSizeCheck" />
                </RadioGroup>
            </HorizontalScrollView>
            <View
                android:id="@+id/viewBlocker"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:elevation="4dp"/>
        </FrameLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:indicatorColor="@color/green"
        app:trackColor="#B8D6D1"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/article_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        tools:listitem="@layout/article_recycler_view_holder"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintBottom_toBottomOf="parent" />
    <TextView
        android:id="@+id/warning_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="@string/no_articles_found"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>